[package]
authors = ["Yoshizawa Shogo <shogo.yoshizawa.2000@gmail.com>"]
description = "Differential evolution implemented."

name = "ys_differential_evolution"
version = "0.5.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["differential", "evolution", "DE"]

repository = "https://github.com/YoshizawaShogo/differential_evolution"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num = "0.4"
ys_simple_db = "0.1"